stick with older Java methods